--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,3 +1,212 @@
+@charset "utf-8";
+
+/* Reset */
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+p,
+blockquote,
+pre,
+code,
+address,
+ul,
+ol,
+li,
+menu,
+nav,
+section,
+article,
+aside,
+dl,
+dt,
+dd,
+table,
+thead,
+tbody,
+tfoot,
+label,
+caption,
+th,
+td,
+form,
+fieldset,
+legend,
+hr,
+input,
+button,
+textarea,
+object,
+figure,
+figcaption {
+  margin: 0;
+  padding: 0;
+}
+html {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+body {
+  background: #fff;
+  min-width: 320px;
+  -webkit-text-size-adjust: none;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+body,
+input,
+select,
+textarea,
+button {
+  border: none;
+  font-size: 12px;
+  color: #727272;
+}
+ul,
+ol,
+li {
+  list-style: none;
+}
+table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+img,
+fieldset {
+  border: 0;
+}
+address,
+cite,
+code,
+em {
+  font-style: normal;
+  font-weight: normal;
+}
+label,
+img,
+input,
+select,
+textarea,
+button {
+  vertical-align: middle;
+}
+hr {
+  display: none;
+}
+main,
+header,
+section,
+nav,
+footer,
+aside,
+article,
+figure {
+  display: block;
+}
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+/* Form */
+textarea {
+  border: 1px solid #dbdbdb;
+}
+select {
+  height: 32px;
+  font-size: 13px;
+  color: #373737;
+  border: 1px solid #e9e9e9;
+  background: #fff;
+}
+input[type="tel"],
+input[type="time"],
+input[type="text"],
+input[type="password"],
+input[type="search"],
+input[type="email"],
+input[type="file"],
+input[type="url"],
+input[type="number"],
+input[type="date"],
+textarea {
+  width: 100%;
+  height: 30px;
+  font-size: 13px;
+  color: #373737;
+  border: 1px solid #e9e9e9;
+  background: #fff;
+  text-indent: 20px;
+  transition: all 0.5s;
+  vertical-align: middle;
+}
+input::-webkit-input-placeholder {
+  color: #b5b5b5;
+  font-size: 12px;
+  line-height: 100%;
+}
+textarea {
+  padding: 5px 0;
+}
+select:focus,
+textarea:focus,
+input:focus {
+  border: 1px solid #727272;
+}
+
+input[type="tel"][readonly],
+input[type="text"][readonly],
+input[type="password"][readonly],
+input[type="email"][readonly],
+input[type="search"][readonly],
+input[type="tel"][disabled],
+input[type="text"][disabled],
+input[type="password"][disabled],
+input[type="search"][disabled],
+input[type="email"][disabled] {
+  background: #eaeaea;
+  border-color: #c0c0c0;
+  color: #666;
+  -webkit-appearance: none;
+  font-size: 12px;
+}
+textarea[readonly],
+textarea[disabled] {
+  padding: 11px;
+  font-size: 16px;
+  color: #666;
+  font-weight: normal;
+  line-height: 140%;
+  height: 78px;
+  background: #eaeaea;
+  border: 1px solid #c0c0c0;
+}
+
+:global .clear {
+  clear: both;
+}
+:global .clear:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+:global .hide {
+  overflow: hidden;
+  display: block;
+  position: absolute;
+  border: 0;
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
 .headerWrapper {
   position: relative;
 }
@@ -6,11 +215,13 @@ header {
   width: 100%;
   position: relative;
 }
-header .lnb {
+
+header :global .lnb {
   width: 100%;
   background: #f0eff0;
 }
-header .lnb ul {
+
+header :global .lnb ul {
   padding: 0;
   font-size: 0;
   text-align: right;
@@ -18,7 +229,7 @@ header .lnb ul {
   max-width: 1240px;
   margin: 0 auto;
 }
-header .lnb ul li {
+header :global .lnb ul li {
   display: inline-block;
   margin-left: 0;
   font-size: 15px;
@@ -27,7 +238,7 @@ header .lnb ul li {
   position: relative;
   padding: 0 15px;
 }
-header .lnb ul li a:after {
+header :global .lnb ul li a:after {
   display: inline-block;
   position: absolute;
   top: 50%;
@@ -38,50 +249,50 @@ header .lnb ul li a:after {
   transform: translateY(-50%);
   content: "";
 }
-header .lnb ul li:first-child a::after {
+header :global .lnb ul li:first-child a::after {
   display: none;
 }
-header .lnb ul li a {
+header :global .lnb ul li a {
   display: block;
   color: #6a6a6a;
   font-size: 14px;
   font-weight: 300;
 }
 
-header .logo {
+header :global .logo {
   width: 100%;
   padding: 14px 0;
   border-bottom: 1px solid #e8e8e7;
 }
-header .logo .logo_inner {
+header :global .logo :global .logo_inner {
   position: relative;
   max-width: 1240px;
   margin: 0 auto;
 }
-header .logo h1 {
+header :global .logo h1 {
   display: inline-block;
   text-align: left;
 }
-header .logo h1 a {
+header :global .logo h1 a {
   display: block;
   width: 195px;
   height: 56px;
   line-height: 56px;
 }
 
-header .gnb {
+header :global .gnb {
   width: 100%;
   position: relative;
 }
-header .gnb_inner {
+header :global .gnb_inner {
   position: relative;
   max-width: 1240px;
   margin: 0 auto;
   height: 60px;
 }
-header .gnb ul {
+header :global .gnb ul {
 }
-header .gnb ul li {
+header :global .gnb ul li {
   float: left;
   position: relative;
   float: left;
@@ -90,22 +301,23 @@ header .gnb ul li {
   padding: 8px 20px;
   box-sizing: border-box;
 }
-header .gnb ul li a {
+header :global .gnb ul li a {
   display: inline-block;
   font-size: 22px;
   font-weight: 700;
   color: #303030;
   text-align: left;
 }
-header .gnb ul li a span {
+header :global .gnb ul li a span {
   display: block;
   padding: 7px 16px 8px 17px;
 }
-header .gnb ul li a:hover span {
+header :global .gnb ul li a:hover span {
   color: #fff;
   background: #165698;
 }
-.menu_bg {
+
+:global .menu_bg {
   display: none;
   position: absolute;
   background: #fff;
@@ -118,7 +330,7 @@ header .gnb ul li a:hover span {
   -webkit-box-sizing: border-box;
   box-shadow: 0px 1px 0px 0px #585a5d;
 }
-.gnb-depth2 {
+:global .gnb-depth2 {
   display: none;
   position: absolute;
   top: 100%;
