header컴포넌트화:url loader로 background url적용

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -278,6 +278,8 @@ header :global .logo h1 a {
   width: 195px;
   height: 56px;
   line-height: 56px;
+  background: url("../../assets/images/revise_logo_main.png") no-repeat
+    center/195px auto;
 }
 
 header :global .gnb {
