--- a/css/style.css
+++ b/css/style.css
@@ -1,220 +1,225 @@
 @charset "utf-8";
 
-@font-face {font-family:MalgunGothic; src:url(font/MalgunGothic.eot);}
+@font-face {
+  font-family: MalgunGothic;
+  src: url(font/MalgunGothic.eot);
+}
 
 html {
-    width:100%;
-    font-size: 20px;
-  } 
-  body {
-    font-size: 1rem;
-    font-family:'Malgun Gothic', sans-serif;
-  }
-  
-.header-wrap{
-    position:relative;
+  width: 100%;
+  font-size: 20px;
+}
+body {
+  font-size: 1rem;
+  font-family: "Malgun Gothic", sans-serif;
 }
 
-header{
-    width:100%;
-    position:relative;
-}
-header .lnb{
-    width:100%;
-    background:#f0eff0;
-}
-header .lnb ul{
-    padding: 0;
-    font-size: 0;
-    text-align: right;
-    position: relative;
-    max-width: 1240px;
-    margin: 0 auto;
-}
-header .lnb ul li{
-    display: inline-block;
-    margin-left: 0;
-    font-size: 15px;
-    color: #565656;
-    line-height: 33px;
-    position: relative;
-    padding: 0 15px; 
-}
-header .lnb ul li a:after{
-    display: inline-block;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 1px;
-    height: 10px;
-    background: #929292;
-    transform: translateY(-50%);
-    content: '';
-}
-header .lnb ul li:first-child a::after{
-    display:none;
-}
-header .lnb ul li a{
-    display: block;
-    color: #6a6a6a;
-    font-size: 14px;
-    font-weight: 300;
+.header-wrap {
+  position: relative;
 }
 
-header .logo{
-    width:100%;
-    padding: 14px 0;
-    border-bottom: 1px solid #e8e8e7;
+header {
+  width: 100%;
+  position: relative;
 }
-header .logo .logo_inner{
-    position:relative;
-    max-width: 1240px;
-    margin:0 auto;
+header .lnb {
+  width: 100%;
+  background: #f0eff0;
 }
-header .logo h1{
-    display:inline-block;
-    text-align:left;
+header .lnb ul {
+  padding: 0;
+  font-size: 0;
+  text-align: right;
+  position: relative;
+  max-width: 1240px;
+  margin: 0 auto;
 }
-header .logo h1 a{
-    display:block;
-    width:195px;
-    height:56px;
-    line-height: 56px;
-    background:url('../images/revise_logo_main.png') no-repeat center/195px auto ;
+header .lnb ul li {
+  display: inline-block;
+  margin-left: 0;
+  font-size: 15px;
+  color: #565656;
+  line-height: 33px;
+  position: relative;
+  padding: 0 15px;
 }
-
-header .gnb{
-    width:100%;
-    position:relative;
+header .lnb ul li a:after {
+  display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 1px;
+  height: 10px;
+  background: #929292;
+  transform: translateY(-50%);
+  content: "";
 }
-header .gnb_inner{
-    position:relative;
-    max-width: 1240px;
-    margin:0 auto;
-    height:60px;
+header .lnb ul li:first-child a::after {
+  display: none;
 }
-header .gnb ul li{
-    float:left;
-    position: relative;
-    float: left;
-    max-width: 248px;
-    width: 248px;
-    padding: 8px 20px;
-    box-sizing: border-box;
-}
-header .gnb ul li a{
-    display: inline-block;
-    font-size: 22px;
-    font-weight: 700;
-    color: #303030;
-    text-align: left;
-}
-header .gnb ul li a span{
-    display: block;
-    padding: 7px 16px 8px 17px;
-}
-header .gnb ul li a:hover span{
-    color:#fff;
-    background:#165698;
-}
-.menu_bg{
-    display: none;
-    position: absolute;
-    background: #fff;
-    top:100%;
-    left:0;
-    width:100%;
-    height:611px;
-    margin-top:-3px;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-shadow: 0px 1px 0px 0px #585a5d;
-}
-.gnb-depth2{
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding: 20px 0 30px 0;
-    background: #fff;
-    border-right: 1px solid #f4f7f9;
-    border-left: 1px solid #f4f7f9;
-    border-top: solid 1px #e8e8e8;
-}
-.contain{}
-.contents{}
-.search{
-    padding: 50px 0 50px 0;
-    background: linear-gradient( 45deg, #3669AC, #329BBA );
-}
-.search .search-inner{
-    position:relative;
-    max-width: 1240px;
-    margin:0 auto;
-}
-.search .search-inner div{
-    display: inline-block;
-    text-align: left;
-}
-.search .search-inner div:nth-child(2){
-    padding:0 10px;
-}
-.search .search-inner button{
-    background:transparent;
-    color:#fff;
-    border-radius: 2px;
-    padding:19px 25px;
-    font-size: 20px;
-    font-weight:400;
-    border: 2px solid #fff;
-}
-.search .search-inner .search-box{
-    width:80%;
-    border-bottom:2px solid #fff;
-}
-.search .search-inner .search-box input{
-    width: 85%;
-    height: 50%;
-    padding: 5px 0;
-    margin: 17px 0;
-    font-size: 16px;
-    color: #fff;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
-.search .search-inner .search-box input::placeholder{
-    color:#fff;
-    font-size: 20px;
-    font-weight: 400;
-}
-.search .search-inner .search-box button{
-    font-size: 16px;
-    padding:5px 10px;
-    margin-bottom: 31px;
-}
-.search .search-inner .search-box button::before{
-    display: inline-block;
-    width: 24px;
-    height: 15px;
-    margin: 3px 7px 0 0;
-    background: url(../images/sp_main.png) 0 0 no-repeat;
-    background-position: -79px -39px;
-    vertical-align: middle;
-    content: '';    
+header .lnb ul li a {
+  display: block;
+  color: #6a6a6a;
+  font-size: 14px;
+  font-weight: 300;
 }
 
-.service{
-    width:100%;
+header .logo {
+  width: 100%;
+  padding: 14px 0;
+  border-bottom: 1px solid #e8e8e7;
 }
-.service .service-inner{
-    position:relative;
-    max-width: 1240px;
-    margin:0 auto;
-    padding:20px;
+header .logo .logo_inner {
+  position: relative;
+  max-width: 1240px;
+  margin: 0 auto;
 }
-.service .service-inner ul li{
-    float:left;
-    width:calc(12% - 8px);
-    display: inline-block;
+header .logo h1 {
+  display: inline-block;
+  text-align: left;
+}
+header .logo h1 a {
+  display: block;
+  width: 195px;
+  height: 56px;
+  line-height: 56px;
+  background: url("../images/revise_logo_main.png") no-repeat center/195px auto;
+}
+
+header .gnb {
+  width: 100%;
+  position: relative;
+}
+header .gnb_inner {
+  position: relative;
+  max-width: 1240px;
+  margin: 0 auto;
+  height: 60px;
+}
+header .gnb ul li {
+  float: left;
+  position: relative;
+  float: left;
+  max-width: 248px;
+  width: 248px;
+  padding: 8px 20px;
+  box-sizing: border-box;
+}
+header .gnb ul li a {
+  display: inline-block;
+  font-size: 22px;
+  font-weight: 700;
+  color: #303030;
+  text-align: left;
+}
+header .gnb ul li a span {
+  display: block;
+  padding: 7px 16px 8px 17px;
+}
+header .gnb ul li a:hover span {
+  color: #fff;
+  background: #165698;
+}
+.menu_bg {
+  display: none;
+  position: absolute;
+  background: #fff;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 611px;
+  margin-top: -3px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-shadow: 0px 1px 0px 0px #585a5d;
+}
+.gnb-depth2 {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  padding: 20px 0 30px 0;
+  background: #fff;
+  border-right: 1px solid #f4f7f9;
+  border-left: 1px solid #f4f7f9;
+  border-top: solid 1px #e8e8e8;
+}
+.contain {
+}
+.contents {
+}
+.search {
+  padding: 50px 0 50px 0;
+  background: linear-gradient(45deg, #3669ac, #329bba);
+}
+.search .search-inner {
+  position: relative;
+  max-width: 1240px;
+  margin: 0 auto;
+}
+.search .search-inner div {
+  display: inline-block;
+  text-align: left;
+}
+.search .search-inner div:nth-child(2) {
+  padding: 0 10px;
+}
+.search .search-inner button {
+  background: transparent;
+  color: #fff;
+  border-radius: 2px;
+  padding: 19px 25px;
+  font-size: 20px;
+  font-weight: 400;
+  border: 2px solid #fff;
+}
+.search .search-inner .search-box {
+  width: 80%;
+  border-bottom: 2px solid #fff;
+}
+.search .search-inner .search-box input {
+  width: 85%;
+  height: 50%;
+  padding: 5px 0;
+  margin: 17px 0;
+  font-size: 16px;
+  color: #fff;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+.search .search-inner .search-box input::placeholder {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+}
+.search .search-inner .search-box button {
+  font-size: 16px;
+  padding: 5px 10px;
+  margin-bottom: 31px;
+}
+.search .search-inner .search-box button::before {
+  display: inline-block;
+  width: 24px;
+  height: 15px;
+  margin: 3px 7px 0 0;
+  background: url(../images/sp_main.png) 0 0 no-repeat;
+  background-position: -79px -39px;
+  vertical-align: middle;
+  content: "";
+}
+
+.service {
+  width: 100%;
+}
+.service .service-inner {
+  position: relative;
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.service .service-inner ul li img {
+  float: left;
+  width: calc(12% - 8px);
+  display: inline-block;
 }
