gnb 마우스오버 연결동작 추가

--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -135,3 +135,17 @@ header :global .gnb ul li a:hover span {
   border-left: 1px solid #f4f7f9;
   border-top: solid 1px #e8e8e8;
 }
+
+:global .gnb-depth2_open {
+  display: block;
+  z-index: 500;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  padding: 20px 0 30px 0;
+  background: #fff;
+  border-right: 1px solid #f4f7f9;
+  border-left: 1px solid #f4f7f9;
+  border-top: solid 1px #e8e8e8;
+}
