--- a/css/style.css
+++ b/css/style.css
@@ -315,10 +315,14 @@ header .gnb ul li a:hover span {
     float: left;
     border-right:1px solid #ebebeb;
 }
+.sites .sites-inner > div ul:last-child{
+    border:none;
+}
 .sites .sites-inner > div ul li{
     margin-left:10px;
+    padding:15px;
 }
-.site .sites-inner > div ul li a::after{
+.site .sites-inner > div ul li a::before{
     position: absolute;         
     top: calc(50% - 1px);
     left: 0;
