--- a/css/style.css
+++ b/css/style.css
@@ -374,3 +374,17 @@ transition: all .38s ease-in-out;
 -webkit-transform: translateX(-50%);
 transform: translateX(-50%);
 }
+
+.public{
+    width:100%;
+    padding: 50px 0;
+    background: url(/../images/public_bg.png) 0 0 repeat, linear-gradient( -45deg, #3669AC, #329BBA );
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    background-size: 100% 100%;
+}
+.public .publick_inner{
+    position:relative;
+    max-width:1240px;
+    margin:0 auto;
+}
