--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -451,6 +451,7 @@ header .gnb ul li .a_on span {
   color: #fff;
   font-size: 20px;
   font-weight: 400;
+  background-color: transparent;
 }
 .search .search-inner .search-box button {
   font-size: 16px;
