--- a/frontend/src/components/SignUp/SignUp.module.css
+++ b/frontend/src/components/SignUp/SignUp.module.css
@@ -30,6 +30,14 @@
   padding: 10px 0 120px;
 }
 
+.signUp .wrapper:nth-of-type(3) .input input {
+  margin-right: 6px;
+}
+
+.signUp .wrapper:nth-of-type(3) .input label {
+  padding: 0 2px;
+}
+
 .signUp .wrapper .input {
   position: absolute;
   top: 50%;
@@ -42,6 +50,13 @@
   color: green;
 }
 
+.signUp button {
+  border: 1px solid black;
+  color: #444;
+  margin: 0 3px;
+  padding: 1px;
+}
+
 .signUp form .submit {
   position: absolute;
   bottom: 0;
@@ -49,8 +64,14 @@
   transform: translate(-50%, 150%);
 }
 
-.signUp .input input {
+.signUp .wrapper .input input {
   border: 1px solid black;
   height: auto;
   width: auto;
 }
+
+/* .signUp .wrapper .input input:valid {
+  border: 1px solid skyblue;
+  height: auto;
+  width: auto;
+} */
