--- a/frontend/src/components/SignUp/SignUp.module.css
+++ b/frontend/src/components/SignUp/SignUp.module.css
@@ -1,11 +1,20 @@
 .signUp {
-  position: relative;
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translateX(-50%);
   width: 70%;
   height: auto;
-  margin: 0 auto;
   padding: 5px;
   font-size: 0.7rem;
   border: 1px solid black;
+}
+
+.title {
+  position: absolute;
+  width: inherit;
+  top: 55%;
+  transform: translateX(100%);
 }
 
 .signUp .wrapper {
