--- a/frontend/src/components/SignUp/SignUp.module.css
+++ b/frontend/src/components/SignUp/SignUp.module.css
@@ -8,6 +8,7 @@
   padding: 5px;
   font-size: 0.7rem;
   border: 1px solid black;
+  margin: 0 0 23px 0;
 }
 
 .title {
@@ -68,7 +69,8 @@
 
 .signUp form .submit {
   position: absolute;
-  bottom: 0;
+  bottom: -5%;
+  margin: 0 0 20px 0;
   left: 50%;
   transform: translate(-50%, 150%);
 }
